# media-kit

libs/android/media_kit_libs_android_audio/android/: build.gradle
libs/ios/media_kit_libs_ios_audio/ios/: Makefile  media_kit_libs_ios_audio.podspec
libs/ios/media_kit_libs_ios_audio/ios/media_kit_libs_ios_audio/: Package.swift
libs/macos/media_kit_libs_macos_audio/macos/: Makefile  media_kit_libs_macos_audio.podspec
libs/macos/media_kit_libs_macos_audio/macos/media_kit_libs_macos_audio/: Package.swift
libs/windows/media_kit_libs_windows_audio/windows/: CMakeLists.txt
